# pat

./: .gitignore  CMakeLists.txt  PATConfig.cmake.in  README.md  pat.config  pat.pro  pat_gui.cmake  pat_lib.cmake  patconfig.h.cmake  patconfig.hpp  patconfig.hpp.cmake.in
cmake/: add_library.cmake  compiler.cmake  compiler_gcc.cmake  config.cmake  dependency.cmake  general.cmake  pat_version.cmake  post_build.cmake  project_utils.cmake
common/: settings.cpp  settings.hpp
doc/: CMakeLists.txt  main.tex
examples/: CMakeLists.txt
examples/function01/: main.cpp  pat_function.cpp  pat_function.hpp
examples/rozenbrok/: CMakeLists.txt  rozenbrok.cpp
examples/rozenbrok/testsystem/: CMakeLists.txt  main.cpp
examples/src/: CMakeLists.txt  rozenbrok.cpp
examples/stereo/: CMakeLists.txt
examples/stereo/app/: CMakeLists.txt  main.cpp  settings.cpp  settings.hpp
examples/stereo/testsystem/: CMakeLists.txt  main.cpp  settings.cpp  settings.hpp
gui/: CMakeLists.txt  algwindow.cpp  algwindow.hpp  common.hpp  gui_alg_bruteforce.hpp  gui_main.cpp  gui_mainwindow.cpp  gui_mainwindow.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  paramstatus.cpp  paramstatus.hpp  pat_server.cpp  pat_server.hpp  server.cpp  server.hpp  settingswindow.cpp  settingswindow.hpp
include/pat/: convert.hpp  gui_alg_bruteforce.hpp  gui_algorithm.hpp  gui_mainwindow.hpp  gui_server.hpp  params.hpp  pat.hpp  pat_base.hpp  pat_record_params.hpp  pat_system.hpp  record_params.hpp  version.hpp
lib/include/pat/: alg_bruteforce.hpp  alg_downhill_simplex.hpp  alg_gradient.hpp  algorithm.hpp  function_nd.hpp  number.hpp  pat_base.hpp  pat_convert.hpp  pat_params.hpp  pat_record_params.hpp  pat_strparam.hpp  pat_system.hpp  point.hpp  range.hpp  space_param.hpp  status.hpp  version.hpp
lib/src/: alg_bruteforce.cpp  alg_downhill_simplex.cpp  alg_gradient.cpp  alg_rnd.cpp  algorithm.cpp  function_nd.cpp  number.cpp  pat_base.cpp  pat_params.cpp  pat_strparam.cpp  pat_system.cpp  point.cpp  space_param.cpp
pat/: .gitconfig  CMakeLists.txt  Doxyfile  PATConfig.cmake.in  pat.config  patconfig.h.cmake
pat/app/: CMakeLists.txt
pat/cmake/: FindQt4.cmake  FindTBB.cmake  compilers.cmake  config.cmake  docs.cmake  post_build.cmake  project_utils.cmake  req.cmake  status.cmake
pat/console/: CMakeLists.txt
pat/console/src/: main.cpp  settings.cpp  settings.hpp
pat/gui/: CMakeLists.txt  common.cpp  server.cpp  server.hpp  settingswindow.hpp
pat/include/pat/: alg.hpp  alg_gradient.hpp  convert.hpp  gen.hpp  gr.hpp  number.hpp  params_alg_dx.hpp  params_alg_eps.hpp  params_alg_time.hpp  params_alg_x.hpp  pat.hpp  range.hpp  space_param.hpp  status.hpp  system.hpp
pat/lib/: CMakeLists.txt
pat/lib/include/pat/: alg.hpp  alg_downhill_simplex.hpp  alg_rnd.hpp  algorithm.hpp  application.hpp  client.hpp  generator.hpp  number.hpp  params_alg_dx.hpp  params_alg_eps.hpp  params_alg_n.hpp  params_alg_time.hpp  params_alg_x.hpp  pat.hpp  pat_strparam.hpp  pat_system.hpp  point.hpp  rnd.hpp  server.hpp  settings.hpp  space_param.hpp  system.hpp
pat/lib/src/: alg_bruteforce.cpp  alg_gradient.cpp  alg_rnd.cpp  algorithm.cpp  application.cpp  client.cpp  generator.cpp  gr.cpp  number.cpp  params_alg_dx.cpp  params_alg_eps.cpp  params_alg_n.cpp  params_alg_time.cpp  params_alg_x.cpp  pat_base.cpp  pat_convert.cpp  pat_params.cpp  pat_system.cpp  point.cpp  rnd.cpp  server.cpp  settings.cpp  space_param.cpp  status.cpp  system.cpp
pat/src/: application.cpp  convert.cpp  function_nd.cpp  settings.cpp
pat/src/lib/: alg.cpp  alg_bruteforce.cpp  alg_gradient.cpp  algorithm.cpp  convert.cpp  gen.cpp  number.cpp  params_alg_x.cpp  range.cpp  space_param.cpp  system.cpp
pat/src/server/: algorithm.cpp  algorithm.hpp  algorithm_bruteforce.cpp  algorithm_bruteforce.hpp  algorithm_downhill_simplex.cpp  algorithm_downhill_simplex.hpp  algorithm_gradient.cpp  algorithm_gradient.hpp  algorithm_rnd.cpp  algorithm_rnd.hpp  application.cpp  application.hpp  function_nd.cpp  function_nd.hpp  main.cpp  point.cpp  point.hpp  range.hpp  server.cpp  server.hpp  settings.cpp  settings.hpp  space_param.cpp  space_param.hpp  status.cpp  status.hpp
resources/: resources.qrc
resources/translations/: en.qm  en.ts  ru.qm  ru.ts
src/: convert.cpp  gui_alg_bruteforce.cpp  gui_bruteforce.cpp  gui_main.cpp  gui_mainwindow.cpp  gui_server.cpp  params.cpp  pat.cpp  pat_base.cpp  pat_bruteforce.cpp  pat_client.cpp  pat_convert.cpp  pat_params.cpp  pat_server.cpp  pat_system.cpp  record_params.cpp
